[project]
name = "medium2md"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "markdownify>=1.2.2",
    "python-dateutil>=2.9.0.post0",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "typer[all]>=0.24.1",
]

[project.scripts]
medium2md = "medium2md.cli:app"
