[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medium2md-cli"
version = "0.2.0"
description = "Convert a Medium export ZIP into Hugo-ready Markdown page bundles with localized images."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [
    { name = "Edgar Bermudez", url = "https://github.com/edgarbc" }
]
keywords = ["medium", "hugo", "markdown", "export", "migration", "static-site"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "markdownify>=1.2.2",
    "python-dateutil>=2.9.0.post0",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
medium2md = "medium2md.cli:app"

[project.urls]
Homepage = "https://github.com/edgarbc/medium2md"
Repository = "https://github.com/edgarbc/medium2md"
Documentation = "https://github.com/edgarbc/medium2md#readme"

[project.optional-dependencies]
dev = ["twine>=6.0"]

[tool.hatch.build.targets.wheel]
packages = ["medium2md"]
